# corrinline

./: CHANGELOG.md  README.md  install.sh  pyproject.toml  reminders.md  todo.md
TeX/: basic_font_commands.tex  macro_spec_tests.tex  overlappinglines.tex  prompts.md  simple_test.md  test_responses.tex
TeX/arxiv13/: arxiv13.tex
TeX/trying_lua/: boxlua.tex  simplelua.tex  verysimplesource.tex
artifacts/: arxiv1.tex  arxiv10_autocorrected.tex  arxiv10_commentcorrs.tex  arxiv13_commentcorrs.tex  arxiv13_corrected.tex  arxiv13_inlined.tex  arxiv1_autocorrected.tex  arxiv1_commentcorrs.tex  arxiv1_corrected.tex  arxiv1_inlined.tex  arxiv1_newcaret.tex  arxiv5_commentcorrs.tex  arxiv5_corrected.tex  arxiv5_inlined.tex  extra_envs_autocorrected.tex  extra_envs_inlined.tex  source0_autocorrected.tex  source0_commentcorrs.tex  source0_corrected.tex  utf2tex_autocorrected.tex  utf2tex_inlined.tex
artifacts/extracted_edit_txts/: ann0_edits.txt  arxiv1-edited_edits.txt  arxiv13_ann_edits.txt  arxiv1_ann_edits.txt  arxiv5_ann_edits.txt  arxiv5_ann_edits_before.txt  carets_arxiv1_edits.txt  interuptedline_edits.txt  nested_ann_edits.txt  overlappinglines_ann_edits.txt
artifacts/markdown_prompts/: arxiv13_responses_echo.md  arxiv13_responses_gemini-3-flash-preview.md  prompts_arxiv13.md  (+23 more)
notes/: about.md  about_testing_prompt.md  annin_examples.md  annotation_guidelines.md  corrinline_examples.md  marktex_failures.md  option_usage.md  pixi.md  todo.md
tests/: first.txt  test_extract.py  test_marktex.py  test_phase1segment.py  test_prompt.py  test_segment.py  test_unmark.py
(+108 files in other folders)
