[project]
authors = [{name = "Charles Kolozsvary", email = "charleskolozsvary@gmail.com"}]
dependencies = ["pymupdf>=1.26.7,<2", "pylatexenc>=2.10,<3"]
name = "texpdfedits"
requires-python = ">= 3.14"
version = "0.13.8"

[project.scripts]
corrinline = "texpdfedits.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
texpdfedits = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.14.*"
ptpython = ">=3.0.32,<4"
python-dotenv = ">=1.2.1,<2"
pillow = ">=12.1.1,<13"
icecream = ">=2.1.10,<3"
